--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         .info-text.tool_call { 
             color: rgb(177, 177, 177);
             background-color: #118;
-            padding-left: 50px;
+            margin-left: 50px;
         }
         .info-text.tool_call.collapsed::after {
             background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, #118 100%);
@@ -33,7 +33,7 @@
         .info-text.tool_result { 
             color: black;
             background-color: #aaf; 
-            padding-left: 50px
+            margin-left: 50px
         }
         .info-text.tool_result.collapsed::after {
             background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, #aaf 100%);
